[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator for the A-Maze-ing 42 project"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "vavegee,tbenavid" }
]
license = { text = "MIT" }
keywords = ["maze", "generator", "42", "python"]

[tool.setuptools.packages.find]
where = ["."]